--- a/index_html.html
+++ b/index_html.html
@@ -8,13 +8,28 @@
   </head>
   <body>
     <header class="header">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#footer">About Us</a></li>
-        </ul>
-      </nav>
+      <div class="menu-container">
+        <div class="texts">
+          <div class="logo">
+            <a href="#"> <img src="./logo.svg" width="70px" height="70px" alt="" /></a>
+          </div>
+          <div class="vl"></div>
+          <div class="text1"><a href="#">Help Center</a></div>
+        </div>
+        <div class="buttons">
+          <button class="submit_btn">Submit a request</button>
+          <button class="login">Sign in</button>
+        </div>
+      </div>
+    </header>
+    <header class="searchbar">
+      <div class="sbcontainer">
+        <div class="text2">How can we help?</div>
+        <div class="search">
+          <input type="text" placeholder="Search" />
+          <!-- <button type="submit"></button>-->
+        </div>
+      </div>
     </header>
 
     <main class="main">
