--- a/index_html.html
+++ b/index_html.html
@@ -26,7 +26,7 @@
       <div class="sbcontainer">
         <div class="text2">How can we help?</div>
         <div class="search">
-          <input type="text" placeholder="Search" />
+          <input type="search" placeholder="Search" />
           <!-- <button type="submit"></button>-->
         </div>
       </div>
