added burger menu

--- a/index_html.html
+++ b/index_html.html
@@ -18,6 +18,7 @@
         </div>
         <div class="buttons">
           <button class="submit_btn">Submit a request</button>
+          <button class="rent"><img src="./Hamburger_icon_white.svg" alt="" /></button>
           <button class="login">Sign in</button>
         </div>
       </div>
